chore(admin/flowNodeCounter): text and use skd-js
- use camunda sdk-js
- adjust text

related #CAM-3912

--- a/client/client/scripts/pages/systemSettingsFlowNodeCount.html
+++ b/client/client/scripts/pages/systemSettingsFlowNodeCount.html
@@ -38,7 +38,7 @@
     <label>
       Result
     </label>
-    <pre><strong>{{activityInstances}}</strong> ended Flow Node Instances.</pre>
+    <pre><strong>{{activityInstances}}</strong> Flow Node Instances.</pre>
   </div>
 
   <button
