chore(test): remove sem attribute from HTML
related to CAM-3936

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-criteria.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-criteria.html
@@ -49,8 +49,7 @@
 
                 <option ng-repeat="criterion in criteriaGroup.options"
                         ng-selected="criterion.name === getCriterionName(queryParam.key)"
-                        ng-value="criterion.name"
-                        sem-id="{{criteriaGroup.group}} {{criterion.label}}">
+                        ng-value="criterion.name">
 
                   {{ criterion.label | translate }}
                   {{ (criterion.expressionSupport ? '*' : '') }}
