--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -64,14 +64,12 @@
 
         <li class="dropdown"
             ng-class="activeClass('#/user')">
-          <a sem-show-users
-             href="#/users">Users</a>
+          <a href="#/users">Users</a>
         </li>
 
         <li class="dropdown"
             ng-class="activeClass('#/group')">
-          <a sem-show-groups
-             href="#/groups">Groups</a>
+          <a href="#/groups">Groups</a>
         </li>
 
         <li class="dropdown"
@@ -79,13 +77,11 @@
             show-if-authorized
             auth-permission="ALL"
             auth-resource-name="authorization">
-          <a sem-show-authorizations
-             href="#/authorization?resource=0">Authorizations</a>
+          <a href="#/authorization?resource=0">Authorizations</a>
         </li>
         <li class="dropdown"
             ng-class="activeClass('#/system')">
-          <a sem-show-systems
-             href="#/system?section=system-settings-general">System</a>
+          <a href="#/system?section=system-settings-general">System</a>
         </li>
       </ul>
     </div>
