chore(authorization): rename update to edit

--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -145,7 +145,7 @@
 
             <td class="action" ng-if="!authorization.inUpdate">
               <a ng-click="updateAuthorization(authorization)">
-                Update
+                Edit
               </a>
               <a ng-click="deleteAuthorization(authorization)">
                 Delete
