--- a/client/client/scripts/directives/breadcrumbs.html
+++ b/client/client/scripts/directives/breadcrumbs.html
@@ -11,7 +11,7 @@
 
     <span ng-if="!!crumb.href">
       <a ng-if="!$last"
-         href="{{ crumb.href }}">{{ crumb.label }}</a>
+         href="{{ getHref(crumb) }}">{{ crumb.label }}</a>
 
       <span ng-if="!!$last">{{ crumb.label }}</span>
     </span>
