feat(diagram): add plugin point on diagram
related to CAM-4422

--- a/client/client/scripts/pages/process-definition.html
+++ b/client/client/scripts/pages/process-definition.html
@@ -337,7 +337,7 @@
              on-element-click="handleBpmnElementSelection(id, $event)"
              selection="filter"
              process-data="processData"
-             provider-component="cockpit.processDefinition.diagram.overlay"></div>
+             overlay-provider-component="cockpit.processDefinition.diagram.overlay"></div>
       </div>
 
       <!-- content bottom pane -->
