--- a/client/client/scripts/pages/process-instance.html
+++ b/client/client/scripts/pages/process-instance.html
@@ -106,7 +106,7 @@
              selection="filter"
              process-data="processData"
              page-data="pageData"
-             provider-component="cockpit.processInstance.diagram.overlay"></div>
+             overlay-provider-component="cockpit.processInstance.diagram.overlay"></div>
       </div>
 
       <!-- content bottom pane -->
