--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/actions/override-job-priority/override-job-priority-dialog.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/actions/override-job-priority/override-job-priority-dialog.html
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div class="form-group" ng-show="setJobPriority || !hasOverridingJobPriority()">
+        <div class="form-group" ng-show="setJobPriority">
           <label class="col-xs-4 control-label"
                  for="priority">
             Priority
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <div class="form-group" ng-show="setJobPriority || !hasOverridingJobPriority()">
+        <div class="form-group" ng-show="setJobPriority">
           <label class="col-xs-4 control-label"
                  for="includeJobsPriority">
             Include Existing Jobs
